Bug 288865 - Crash after resuming from disk
Summary: Crash after resuming from disk
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: bluetooth (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Alex Fiestas
URL:
Keywords:
: 289713 289988 291250 291504 293192 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-12-13 06:02 UTC by Kevin Goeser
Modified: 2012-04-25 22:13 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.9.2
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (4.06 KB, text/plain)
2012-03-28 09:32 UTC, xandry
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Goeser 2011-12-13 06:02:31 UTC
Application: bluedevil-wizard (0.1)
KDE Platform Version: 4.7.3 (4.7.3)
Qt Version: 4.7.4
Operating System: Linux 3.0.0-13-generic-tuxonice x86_64
Distribution: Ubuntu 11.10

-- Information about the crash:
- What I was doing when the application crashed:
The crash happened immediatly after resuming from disk (nothing else special).

-- Backtrace:
Application: Bluetooth-Assistent (bluedevil-wizard), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f0ab509b780 (LWP 15370))]

Thread 2 (Thread 0x7f0aa3f99700 (LWP 15371)):
#0  0x00007f0ab257a749 in __GI___poll (fds=0x143f710, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:85
#1  0x00007f0ab00d1f68 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f0ab00d2429 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f0ab2ce2f3e in QEventDispatcherGlib::processEvents (this=0x143f6a0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#4  0x00007f0ab2cb6cf2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007f0ab2cb6ef7 in QEventLoop::exec (this=0x7f0aa3f98dd0, flags=...) at kernel/qeventloop.cpp:201
#6  0x00007f0ab2bce27f in QThread::exec (this=<optimized out>) at thread/qthread.cpp:498
#7  0x00007f0ab2c99cbf in QInotifyFileSystemWatcherEngine::run (this=0x143e8f0) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007f0ab2bd0d05 in QThreadPrivate::start (arg=0x143e8f0) at thread/qthread_unix.cpp:331
#9  0x00007f0ab05a3efc in start_thread (arg=0x7f0aa3f99700) at pthread_create.c:304
#10 0x00007f0ab258689d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f0ab509b780 (LWP 15370)):
[KCrash Handler]
#6  0x00007f0ab442a778 in BlueDevil::Adapter::isPowered() const () from /usr/lib/libbluedevil.so.1
#7  0x00007f0ab441e2f4 in BlueDevil::Manager::Private::findUsableAdapter() () from /usr/lib/libbluedevil.so.1
#8  0x00007f0ab441e79c in BlueDevil::Manager::Private::_k_adapterAdded(QDBusObjectPath const&) () from /usr/lib/libbluedevil.so.1
#9  0x00007f0ab4420a86 in BlueDevil::Manager::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libbluedevil.so.1
#10 0x00007f0ab2ccaeba in QMetaObject::activate (sender=0x13f8fe0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff92baa530) at kernel/qobject.cpp:3278
#11 0x00007f0ab4433342 in ?? () from /usr/lib/libbluedevil.so.1
#12 0x00007f0ab44336c4 in ?? () from /usr/lib/libbluedevil.so.1
#13 0x00007f0ab300f0e9 in QDBusConnectionPrivate::deliverCall (this=0x13ed700, object=0x13f8fe0, msg=..., metaTypes=..., slotIdx=5) at qdbusintegrator.cpp:942
#14 0x00007f0ab301838f in QDBusCallDeliveryEvent::placeMetaCall (this=<optimized out>, object=<optimized out>) at qdbusintegrator_p.h:103
#15 0x00007f0ab2ccea5e in QObject::event (this=0x13f8fe0, e=<optimized out>) at kernel/qobject.cpp:1217
#16 0x00007f0ab3931424 in notify_helper (e=0x16d3840, receiver=0x13f8fe0, this=0x10b30d0) at kernel/qapplication.cpp:4486
#17 QApplicationPrivate::notify_helper (this=0x10b30d0, receiver=0x13f8fe0, e=0x16d3840) at kernel/qapplication.cpp:4458
#18 0x00007f0ab3936291 in QApplication::notify (this=0x7fff92bab070, receiver=0x13f8fe0, e=0x16d3840) at kernel/qapplication.cpp:4365
#19 0x00007f0ab4879126 in KApplication::notify (this=0x7fff92bab070, receiver=0x13f8fe0, event=0x16d3840) at ../../kdeui/kernel/kapplication.cpp:311
#20 0x00007f0ab2cb7afc in QCoreApplication::notifyInternal (this=0x7fff92bab070, receiver=0x13f8fe0, event=0x16d3840) at kernel/qcoreapplication.cpp:787
#21 0x00007f0ab2cbb51f in sendEvent (event=0x16d3840, receiver=0x13f8fe0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#22 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x10965e0) at kernel/qcoreapplication.cpp:1428
#23 0x00007f0ab2ce2a73 in sendPostedEvents () at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:220
#24 postEventSourceDispatch (s=<optimized out>) at kernel/qeventdispatcher_glib.cpp:277
#25 0x00007f0ab00d1a5d in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#26 0x00007f0ab00d2258 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#27 0x00007f0ab00d2429 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#28 0x00007f0ab2ce2ed6 in QEventDispatcherGlib::processEvents (this=0x1097cd0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#29 0x00007f0ab39d907e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=<optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#30 0x00007f0ab2cb6cf2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#31 0x00007f0ab2cb6ef7 in QEventLoop::exec (this=0x7fff92bab000, flags=...) at kernel/qeventloop.cpp:201
#32 0x00007f0ab2cbb789 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1064
#33 0x0000000000409403 in ?? ()
#34 0x00007f0ab24c630d in __libc_start_main (main=0x408fb0, argc=1, ubp_av=0x7fff92bab358, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7fff92bab348) at libc-start.c:226
#35 0x000000000040946d in _start ()

Reported using DrKonqi
Comment 1 Bogdan Udrescu 2011-12-14 08:31:55 UTC
This bug is unique but I was not able to reproduce it.
Comment 2 Myriam Schweingruber 2011-12-14 21:41:44 UTC
Is this a one-time crash or is it reproducible?
Comment 3 Kevin Goeser 2011-12-15 18:45:12 UTC
Hi,

sorry, I forgot the following additional info:
- the hardware is a macbook pro 6,2
- kubuntu is installed from the mac alternate install image
- I'm using the tuxonice kernel and hibernation (installed from the tuxonice PPA)
- KDE is coming from the kubuntu PPA

I had the crash definitely a second time, but it does not happen every time.

Do you need more information?

Cheers
Kevin
Comment 4 Myriam Schweingruber 2011-12-16 18:17:12 UTC
Why do you use a different kernel and not the default one? Usually the default kernels coming with Ubuntu are the recommended ones.
Also, do you use any bluetooth connected devices? Since the crash is in the bluetooth connection wizard something must be triggering this problem.
Comment 5 Christoph Feck 2011-12-24 12:29:32 UTC
*** Bug 289713 has been marked as a duplicate of this bug. ***
Comment 6 Christoph Feck 2011-12-28 12:56:23 UTC
Confirmed by duplicates.
Comment 7 Christoph Feck 2011-12-28 12:56:54 UTC
*** Bug 289988 has been marked as a duplicate of this bug. ***
Comment 8 Christoph Feck 2012-01-14 11:34:16 UTC
*** Bug 291504 has been marked as a duplicate of this bug. ***
Comment 9 Kevin Goeser 2012-01-14 11:38:45 UTC
I use the tuxonice package since it is hibernating and resuming more reliably and faster than the default kernel.

I'm using a mobile phone for internet and a headset via bluetooth.
Comment 10 Lamarque V. Souza 2012-03-26 20:13:04 UTC
*** Bug 293192 has been marked as a duplicate of this bug. ***
Comment 11 xandry 2012-03-28 09:32:07 UTC
Created attachment 69959 [details]
New crash information added by DrKonqi

bluedevil-helper (0.1) on KDE Platform 4.8.1 (4.8.1) "release 483" using Qt 4.8.0

- What I was doing when the application crashed:
Nothing. At the begining sending system sleep to RAM and just wake up system from RAM.

-- Backtrace (Reduced):
#6  0x00007f0a624aa7e8 in BlueDevil::Adapter::isPowered (this=0x871500) at /usr/src/debug/libbluedevil-1.9.1/bluedevil/bluedeviladapter.cpp:270
#7  0x00007f0a6249cd82 in BlueDevil::Manager::Private::findUsableAdapter (this=0x856a70) at /usr/src/debug/libbluedevil-1.9.1/bluedevil/bluedevilmanager.cpp:123
#8  0x00007f0a6249d22a in BlueDevil::Manager::Private::_k_adapterAdded (this=0x856a70, objectPath=<optimized out>) at /usr/src/debug/libbluedevil-1.9.1/bluedevil/bluedevilmanager.cpp:145
[...]
#10 0x00007f0a624b3d45 in AdapterAdded (_t1=<optimized out>, this=0x875c80) at /usr/src/debug/libbluedevil-1.9.1/build/bluedevil/bluezmanager.moc:128
#11 OrgBluezManagerInterface::qt_static_metacall (_o=0x875c80, _c=<optimized out>, _id=<optimized out>, _a=0x7fff3d250320) at /usr/src/debug/libbluedevil-1.9.1/build/bluedevil/bluezmanager.moc:68
Comment 12 Maxim Levitsky 2012-03-28 11:33:24 UTC
I confirm that as well. I can easily trigger this by turning Bluetooth on and off,
(which effectively removes/adds internal USB Bluetooth dongle)
Comment 13 Alex Fiestas 2012-04-25 22:11:50 UTC
*** Bug 291250 has been marked as a duplicate of this bug. ***
Comment 14 Alex Fiestas 2012-04-25 22:13:21 UTC
Git commit 51d4b7ac298b47d6ee5845844842ea9208a17021 by Alex Fiestas.
Committed on 25/04/2012 at 23:04.
Pushed by afiestas into branch 'master'.

Fill properties with defaults in case that GetProperties is not valid
FIXED-IN: 1.9.2

M  +23   -1    bluedevil/bluedeviladapter.cpp

http://commits.kde.org/libbluedevil/51d4b7ac298b47d6ee5845844842ea9208a17021