Fill properties with defaults in case that GetProperties is not valid

BUG: 288865
FIXED-IN: 1.9.2